--- a/contrib/other-builds/mert_lib/.project
+++ b/contrib/other-builds/mert_lib/.project
@@ -82,6 +82,16 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>BleuDocScorer.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/mert/BleuDocScorer.cpp</locationURI>
+		</link>
+		<link>
+			<name>BleuDocScorer.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/mert/BleuDocScorer.h</locationURI>
+		</link>
+		<link>
 			<name>mert</name>
 			<type>2</type>
 			<locationURI>PARENT-3-PROJECT_LOC/mert</locationURI>
