--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -472,14 +472,14 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/InputFileStream.h</locationURI>
 		</link>
 		<link>
-			<name>InputLatticeNode.cpp</name>
+			<name>InputPath.cpp</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/InputLatticeNode.cpp</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/InputPath.cpp</locationURI>
 		</link>
 		<link>
-			<name>InputLatticeNode.h</name>
+			<name>InputPath.h</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/InputLatticeNode.h</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/InputPath.h</locationURI>
 		</link>
 		<link>
 			<name>InputType.cpp</name>
